force-app/main/default/objects/Contact/fields/AttendanceRate__c.field-meta.xml
<CustomField>
    <fullName>AttendanceRate__c</fullName>
    <formula>IF(NumAbsentServiceDeliveries__c > 0 || NumPresentServiceDeliveries__c > 0 ,
NumPresentServiceDeliveries__c / (NumPresentServiceDeliveries__c + NumAbsentServiceDeliveries__c),
null)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Attendance Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>