force-app/main/default/objects/Contact/fields/ConsecutiveAbsences__c.field-meta.xml
<CustomField>
    <fullName>ConsecutiveAbsences__c</fullName>
    <inlineHelpText>The number of consecutive absences for this Contact, counting back from today. Clears to 0 when most recent Service Delivery was present.</inlineHelpText>
    <label>Consecutive Absences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>