force-app/main/default/objects/Contact/fields/IsClient__c.field-meta.xml
<CustomField>
    <fullName>IsClient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to mark the Contact a client findable via Client Search. Add field to the Client Card field set to create a badge displayed under the client photo.</description>
    <inlineHelpText>A checkbox to mark the Contact a client findable via Client Search. Also used to create a badge displayed under the client photo.</inlineHelpText>
    <label>Client</label>
    <type>Checkbox</type>
</CustomField>